--- a/index.html
+++ b/index.html
@@ -11,22 +11,60 @@
 <h1>Rue de Seine Jackson Sienna Wedding Dress</h1>
 <nav>
     <ul class="nav">
-    <li class="nav__item"><a href="#">About</a></li>
-    <li class="nav__item"><a href="#">Gallery</a></li>
-    <li class="nav__item"><a href="#">Make an Offer</a></li>
+    <li class="nav__item"><a href="./index.html">About</a></li>
+    <li class="nav__item"><a href="./contact.html">Make an Offer</a></li>
     </ul>
 </nav>
 </header>
 <h2>About</h2>
-<p>This is a brand new with tags, never been worn wedding dress by the brand Rue de Seine.
+<p>This is a new with tags, never been worn wedding dress by the brand Rue de Seine.
     The original listing can be found <a href="https://ruedeseine.com/collections/rue-icons-collection/jackson-nude">here</a> 
     I bought this dress in 2019 from the wedding boutique "Ceremony Boston". Unfortunately the pandemic put off our wedding date until 
-    we decided to call it off, and instead take a vacation to Italy! The price is 3450, or best offer. Contact me with any questions!</p>
+    we decided to call it off, and instead take a vacation to Italy! I bought it full price and I am asking 3200, or best offer. Contact me with any questions!</p>
+        <p>Dress Description from the Rue de Seine website</p>
+        <p>"Off-white embroidery on mesh, paired with a deep sienna mesh lining, give the Jackson Gown a very modern
+            romance.
+            Ethereal and elegant, the form fitted silhouette to low hip and plunging neckline fuse effortless modern romance
+            with
+            classic beauty. Side godets add volume to the skirt, while maintaining a close to the body fit at the front.
+            Floral
+            lace
+            is showcased beautifully with the contrast of sienna lining throughout the entire gown."</p>
+        <ul>
+            <li><a href="./images/front dress.jpg"></a>
+                <img src="./images/front dress.jpg" alt="picture of the dress on me from the side" height="450" width="350" />
+                <img />
+            </li>
+            <li><a href="./images/back dress.jpg"></a>
+                <img src="./images/back dress.jpg" alt="picture of the dress on me from the back" height="450" width="350" />
+                <img />
+            </li>
+            <li><a href="./images/JACKSON-0678.jpg">
+                    <img src="./images/JACKSON-0678.jpg" alt="dress picture on model from original listing" height="450"
+                        width="350" />
+                    <img />
+                </a></li>
+            <li><a href="./images/JACKSON-0685.jpg"></a>
+                <img src="./images/JACKSON-0685.jpg" alt="dress picture on model from original listing" height="450"
+                    width="350" />
+                <img />
+            </li>
+            <li><a href="./images/JACKSON_0717.jpg"></a>
+                <img src="./images/JACKSON_0717.jpg" alt="dress picture on model from original listing" height="450"
+                    width="350" />
+                <img />
+            </li>
+            <li><a href="./images/JACKSON-0687.jpg"></a>
+                <img src="./images/JACKSON-0687.jpg" alt="dress picture on model from original listing" height="450"
+                    width="350" />
+                <img />
+            </li>
+        </ul>
 <footer>
     <h3>Contact</h3>
     <ul>
-    <tel>(508)-367-8367</tel>
-    <email></email>
+    <li><tel>(774)-994-2509</tel></li>
+    <li><email>rfrederi11@gmail.com</email></li>
     </ul>
 </footer>
 </body>
