--- a/thedress.html
+++ b/thedress.html
@@ -1,4 +1,22 @@
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<header>
 <h2>The Dress</h2>
+<nav>
+    <ul class="nav">
+        <li class="nav__item"><a href="./index.html">About</a></li>
+        <li class="nav__item"><a href="./gallery.html">Gallery</a></li>
+        <li class="nav__item"><a href="./contact.html">Make an Offer</a></li>
+    </ul>
+</header>
+<body>
+    
+
 <p>Dress Description from the Rue de Seine website</p>
 <p>"Off-white embroidery on mesh, paired with a deep sienna mesh lining, give the Jackson Gown a very modern romance.
     Ethereal and elegant, the form fitted silhouette to low hip and plunging neckline fuse effortless modern romance
@@ -6,3 +24,15 @@
     classic beauty. Side godets add volume to the skirt, while maintaining a close to the body fit at the front. Floral
     lace
     is showcased beautifully with the contrast of sienna lining throughout the entire gown."</p>
+</body>
+<footer>
+    <h3>Contact</h3>
+    <ul>
+        <li>
+            <tel>(774)-994-2509</tel>
+        </li>
+        <li>
+            <email>rfrederi11@gmail.com</email>
+        </li>
+    </ul>
+</footer>
