--- a/gallery.html
+++ b/gallery.html
@@ -25,48 +25,38 @@
         </div>
     </header>
     <ul class="gallery__list">
-        <li class="gallery__item"><a href="./images/front dress.jpg"></a>
-            <img src="./images/front dress.jpg" alt="picture of the dress on me from the side" height="450"
-                width="350" />
-            <img />
+        <li class="gallery__item"><a href="./images/front__dress.jpg"></a>
+            <img src="./images/front__dress.jpg" alt="picture of the dress on me from the side" height="450"
+                width="350">
         </li>
-        <li class="gallery__item"><a href="./images/back dress.jpg"></a>
-            <img src="./images/back dress.jpg" alt="picture of the dress on me from the back" height="450"
-                width="350" />
-            <img />
+        <li class="gallery__item"><a href="./images/back__dress.jpg"></a>
+            <img src="./images/back__dress.jpg" alt="picture of the dress on me from the back" height="450"
+                width="350">
         </li>
         <li class="gallery__item"><a href="./images/dress__closeup.jpg"></a>
             <img src="./images/dress__closeup.jpg" alt="picture of the dress on me from the side" height="450"
-                width="350" />
-            <img />
+                width="350">
         </li>
         <li class="gallery__item"><a href="./images/dress__displayback.jpg"></a>
             <img src="./images/dress__displayback.jpg" alt="picture of the dress on me from the side" height="450"
-                width="350" />
-            <img />
+                width="350">
         <li class="gallery__item"><a href="./images/JACKSON-0678.jpg">
                 <img src="./images/JACKSON-0678.jpg" alt="dress picture on model from original listing" height="450"
-                    width="350" />
-                <img />
+                    width="350">
             </a></li>
         <li class="gallery__item"><a href="./images/JACKSON-0685.jpg"></a>
             <img src="./images/JACKSON-0685.jpg" alt="dress picture on model from original listing" height="450"
-                width="350" />
-            <img />
+                width="350">
         </li>
         <li class="gallery__item"><a href="./images/JACKSON_0717.jpg"></a>
             <img src="./images/JACKSON_0717.jpg" alt="dress picture on model from original listing" height="450"
-                width="350" />
-            <img />
+                width="350">
         </li>
         <li class="gallery__item"><a href="./images/JACKSON-0687.jpg"></a>
             <img src="./images/JACKSON-0687.jpg" alt="dress picture on model from original listing" height="450"
-                width="350" />
-            <img />
+                width="350">
         </li>
     </ul>
-</form>
-</div>
 <footer class="footer footer__container">
     <h3 class="footer__title">Contact Me</h3>
     <ul class="footer__nav">
